# conway_python

./: README.md  TODO.md  pyproject.toml
conway_python/: __main__.py  cli.py  grid.py  patterns.py  views.py
